# envshield

./: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  cli.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: envshield.ci.yml
.github/workflows/: ci.yml
core/: env_manager.py  secret_scanner.py  secure_sharing.py  template_manager.py
envguard/: __main__.py  cli.py  state.py
envguard/assets/: default_global_config.yml  default_project_config.yml  default_secret_patterns.json
envguard/config/: manager.py
envguard/core/: constants.py  exceptions.py  file_updater.py  profile_manager.py  scanner.py  template_manager.py
envguard/parsers/: _base.py  _dotenv.py  _python.py  factory.py
envguard/utils/: display.py  error_handling.py  git_utils.py  helpers.py
envshield/: cli.py  state.py
envshield/config/: manager.py
envshield/core/: doctor.py  exceptions.py  file_updater.py  importer.py  inspector.py  profile_manager.py  scanner.py  schema_manager.py  setup_manager.py  template_manager.py
envshield/parsers/: _base.py  _dotenv.py  _python.py  factory.py
envshield/tests/: test_cli.py
envshield/tests/core/: test_doctor.py  test_file_updater.py  test_importer.py  test_scanner_compliance.py  test_schema_manager.py  test_setup_manager.py
envshield/tests/parsers/: python_parser.py  test_dotenv_parser.py
envshield/utils/: git_utils.py
utils/: config.py  constants.py  display.py  error_handling.py  git_hook.py  logger.py  security.py
