[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envshield"
version = "2.0.1"  # must be a string for PEP 621 compliance
description = "EnvShield: A CLI for secure local environment management and secret prevention."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
    { name = "Rabbil Yasar Sajal", email = "rabbilyasar@gmail.com" }
]
keywords = ["environment", "security", "secrets", "cli", "devops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]

dependencies = [
    "PyYAML>=6.0,<7.0",
    "rich>=13.0,<15.0",
    "questionary>=2.0,<3.0",
    "typer[all]>=0.9,<1.0",
    "toml>=0.10,<1.0"
]

[project.scripts]
envshield = "envshield.cli:app"

[tool.bumpversion]
current_version = "2.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "envshield/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-mock",
    "bump2version",
]

